@@ -1,3 +1,9 @@
+2011-07-02 John Wu <John dot Wu at ACM dot org>
+	* src/tafel.cpp: change the default delimiters into the same list
+	of  " ,;\t\n\v" when extracting fields from text verson of data.
+	This fixes the last error found while testing the function
+	ibis::table::toTable
+
 2011-07-01 John Wu <John dot Wu at ACM dot org>
 	* src/index.cpp: clean up the messages printed out from
 	divideCounts based on a suggestion from Andrew Olson
